--- a/index.html
+++ b/index.html
@@ -1,31 +1,36 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <title>Space X</title>
     <meta charset="UTF-8" />
 
     <script src="src/index.js" type="module"></script>
     <link href="styles/app.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <link rel="icon" type="image/x-icon" href="https://www.spacex.com/static/images/favicon.ico">
 </head>
 
-<body>
-<header>
-    <h1> SpaceX Stats</h1>
-</header>
+<body class="bg-secondary text-white mx-2">
+    <header>
+        <h1> SpaceX Stats</h1>
+    </header>
     <main class="main">
         <aside class="aside">
-        <h3>Launches</h3>
-        <div id="listContainer">
+            <h3>Launches</h3>
+            <div id="listContainer">
 
-        </div>
+            </div>
         </aside>
         <content class="content">
             <div id="map"> </div>
         </content>
     </main>
 
-<footer>
+    <footer>
 
-</footer>
+    </footer>
 </body>
+
 </html>
